--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="../static/s-css/settle.css">
 </head>
-
+<script src="../static/s-js/jquery.min.js"></script>
 <body>
   <div class="passenger">
     <h2>尊敬的....用户
