the 66th commit

--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -108,4 +108,12 @@
     </div>
   </div>
 </body>
+<script>
+  var email = '{{ email }}';
+  var table = '{ table }';
+  var cabin = '{ cabin }';
+  var st = { st };
+  alert(email);
+
+</script>
 </html>
