--- a/templates/index.html
+++ b/templates/index.html
@@ -150,13 +150,14 @@
                             <li><input type="button" value="经济舱低价" class="but"></li>
                         </ul>
                         <ul class="show-nav-sort">
-                            <li>
+                            <!-- <li>
                                 <input type="button" class="pay" value="￥结算">
-                                <!-- 查询按钮 -->
-                            </li>
+                            
+                            </li> -->
                         </ul>
                     </form>
                 </div>
+                <input type="button" class="pay" value="￥结算">
                 <div class="nav2">
                     <!-- 2 -->
                     <form class="show-nav-info">
