--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,7 @@
                         </ul>
                     </form>
                 </div>
-                <input type="button" class="pay" value="￥结算">
+                <input type="button" class="pay" value="￥预订">
                 <h4 class="nav_tishi"></h4>
                 <h4 class="nav_tishi3"></h4>
                 <div class="nav2">
