--- a/templates/index.html
+++ b/templates/index.html
@@ -268,6 +268,7 @@
             </div>
         </div>
     </div>
+    <input type="radio" value="nihao,sss" checked="checked">你好
 </body>
 <script>
     var gobtn = document.getElementById('gobtn');
