--- a/templates/index.html
+++ b/templates/index.html
@@ -310,6 +310,11 @@
             xiaoxi.innerHTML = '请把搜索信息填写完整';
             tishi.className='tishi2';
         }
+        else if(acity.value==bcity.value)
+        {
+            xiaoxi.innerHTML = '出发地和目的地相同啦';
+            tishi.className='tishi2';
+        }
         else {
             xiaoxi.innerHTML = '';
             tishi.className='tishi';
