--- a/templates/index.html
+++ b/templates/index.html
@@ -235,7 +235,7 @@
             <span>
                 航班信息显示qwq
                 <p>
-                    <img src="../static/s-other/1(1).png" alt="">
+                    <img src="../static/s-other/show.gif" alt="">
                 </p>
             </span>
         </div>
@@ -243,39 +243,29 @@
             <span>
                 航班信息显示qwq
                 <p>
-                    <img src="../static/s-other/1(1).png" alt="">
+                    <img src="../static/s-other/show.gif" alt="">
                 </p>
             </span>
         </div>
     </div>
     <div id="foot">
         <div class="foot2">
-            <p class="name">中国民航为你提供实时举报服务</p>
-            <div class="wen">
-                <p>沪公安31010502002731号丨互联网药品信息服务资格证丨（沪）网械平台备字[2022]第00001号丨旅游度假资质</p>
-                <p>违法和不良信息举报电话021-22500846丨全国旅游投诉热线12345丨上海市旅游网站落实诚信建设主体责任承诺书</p>
-            </div>
-            <div class="first">
-                <a href="http://www.cecpsp.org.cn/index.credit?action=certDetail&amp;id=40288084605466f1016057ea4cb20021"
-                    class="honour1" target="_blank" rel="nofollow"><img src="../static/s-other/dj.png" alt=""></a>
-                <a href="http://scjgj.sh.gov.cn/" title="工商亮照标识" class="honour2" target="_blank" rel="nofollow"><img
-                        src="../static/s-other/sh.png" alt=""></a>
-                <a href="http://www.zx110.org/" class="honour4" target="_blank" rel="nofollow" title="征信网"><img
-                        src="../static/s-other/zx.png" alt=""></a>
-                <a href="http://www.shjbzx.cn/" class="honour5" target="_blank" rel="nofollow"
-                    title="上海市互联网违法与违规信息举报中心"><img src="../static/s-other/l.png" alt=""></a>
-                <a href="https://ss.knet.cn/verifyseal.dll?sn=e12061531010025926306977" class="honour6" target="_blank"
-                    rel="nofollow" title="可信网站"><img src="../static/s-other/z.png" alt=""></a>
-                <a href="http://www.creditchina.gov.cn/" class="honour10" title="信用中国" target="_blank"
-                    rel="nofollow"><img src="../static/s-other/xin.png" alt=""></a>
-                <a href="https://im-synthesize.ctrip.com/complaints/rights/AppealCreate" class="honour11"
-                    title="消费维权联络点" target="_blank" rel="nofollow"><img src="../static/s-other/jubao.png" alt=""></a>
-                <a href="http://www.huilan.com/zkhl/fa/ai+zw/zxkfwza/" class="honour100" title="适老化及无障碍标识"
-                    rel="nofollow"><img src="../static/s-other/wang.png" alt=""></a>
-            </div>
+            <h3 style="margin: auto;width:100%;">中国民航提醒您航空旅行十大风险</h3>
+            <ol style="float: left;margin-left: 450px;">
+            <li>1.疫情防控政策严 出行要求需看全</li>
+            <li>2.国际航班数量减 黄牛售票有风险</li>
+            <li>3.廉价机票销售火 退改条件限制多</li>
+            <li>4.组合航班非联程 错失中转无保证</li>
+            <li>5.行李标准有差异 购票旅行要注意</li></ol>
+            <ol style="float: right;margin-right: 450px;">
+                <li>6.陌生号码须留神 转账汇款应谨慎</li>
+                <li>7.旅行套餐品类多 选择服务莫出错</li>
+                <li>8.身体有恙应说明 特殊需求要申请</li>
+                <li>9.推销办卡有陷阱 冲动消费不可行</li>
+                <li>10.航空安全要敬畏 旅客乘机应守规</li>
+            </ol>
         </div>
     </div>
-    <input type="radio" value="nihao,sss" checked="checked">你好
 </body>
 <script>
     var gobtn = document.getElementById('gobtn');
