the 69th commit

--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -184,6 +184,7 @@
       <!-- 订单左边 -->
       <!-- 订单右边 -->
       <div class="col-sm-5 bg-gray-eee">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
         <div id="list_hang">
 
         </div>
