--- a/templates/index.html
+++ b/templates/index.html
@@ -86,10 +86,10 @@
             <!-- 选择时间 -->
             <div class="search-time">
                 <div class="time-start"><span>出发时间&nbsp&nbsp</span>
-                    <input type="date" class="input">
+                    <input type="date" class="time0 input">
                 </div>
                 <div class="time-end"><span>返回时间&nbsp&nbsp</span>
-                    <input type="date" class="input">
+                    <input type="date" class="time2 input">
                 </div>
             </div>
         </div>
