--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -19,7 +19,7 @@
       尊敬的用户您的订单如下
     </div>
   </div>
-  
+         <input type="button" value="返回" class="settle_back">
   <div class="body0">
     <div class="container bg-gray-eee box-shadow mar-bottom-30"
       style="padding-right:0px; padding-left:0px; position:relative; margin-top:120px;">
