the 73th commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <script src="../static/s-js/jquery.min.js"></script>
 </head>
 <body>
-    <input type="button" id="tuichu" value="退出登录" onclick="back()">
+    <input type="button" id="tuichu" value="退出登录" onclick="location.replace('{{ url }}');">
     <!-- 遮罩层 -->
     <div class="cover">
     </div>
