--- a/templates/settlement.html
+++ b/templates/settlement.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   <div class="head">
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
     <div>
       尊敬的用户您的订单如下
     </div>
