--- a/templates/index.html
+++ b/templates/index.html
@@ -60,10 +60,10 @@
                 <span> <input type="button" value="第 1 程" class="decline" style="pointer-events: none;"></span>
             </div>
             <span><input class="up" type="button"
-                    style="position: absolute;right:5px;top:0px;border:none;font-size: large;background-color:aliceblue;cursor: pointer;"
+                    style="position: absolute;right:5px;top:0px;border:none;font-size:large;width:50px;height:40px;background-color:aliceblue;cursor: pointer;"
                     value=""></span>
             <!-- 添加按钮 -->
-            <span style="position: absolute;right: 50px;top: 30px;"><input type="button" value="再加一程"
+            <span style="position: absolute;right: 80px;top: 30px;"><input type="button" value="再加一程"
                     class="addition"></span>
         </div>
         <!-- 单程，往返 -->
