--- a/templates/index.html
+++ b/templates/index.html
@@ -65,16 +65,18 @@
             <!-- 添加按钮 -->
             <span style="position: absolute;right: 80px;top: 30px;"><input type="button" value="再加一程"
                     class="addition"></span>
+             <!-- <span style="position: absolute;right: 15px;top: 50px;"><input type="button" value="刷新"
+                   class="update"></span> -->
         </div>
         <!-- 单程，往返 -->
         <div class="search_single">
             <div class="search-address">
                 <p class="xiaoxi"></p>
 
-                <div class="selcet"><label for="dan"><input type="radio" name="trip" id="dan"
-                            checked="checked">单程</label>
-                    <label for="shuang"><input type="radio" name="trip" id="shuang">往返</label>
-                    <label for="duo"><input type="radio" name="trip" id="duo">多程</label>
+                <div class="selcet"><label for="dan" style="margin-right:22px;"><input type="radio" name="trip" id="dan"
+                            checked="checked" style="display:inline-block;height:15px;width:15px;">单程</label>
+                    <label for="shuang" style="margin-right:22px;"><input type="radio" name="trip" id="shuang" style="display:inline-block;height:15px;width:15px;">往返</label>
+                    <label for="duo" style="margin-right:22px;"><input type="radio" name="trip" id="duo" style="display:inline-block;height:15px;width:15px;">多程</label>
                 </div>
                 <div class="address-start"><span>出发点&nbsp&nbsp</span>
                     <input type="text" class="citySelect" value="城市名">
